--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,40 +52,38 @@ footer{background: #2E2E2E;padding: 16px 16px 9px;box-sizing: border-box;}
 #btnTop{opacity: 0;transform: translate(0, 30px);position: fixed;bottom: 30px;left: calc(50vw + 310px);width: 50px;height: 50px;background-color: rgba(255, 0, 151, 0.7);backdrop-filter: blur(2px);background-image: url(../images/icon_top.svg);background-position: center;background-repeat: no-repeat;border-radius: 50%;overflow: hidden;text-indent: -9999px;white-space: nowrap;transition: 1s;-webkit-transition: 1s;pointer-events: none;}
 #btnTop.show{opacity: 1;transform: translate(0, 0);pointer-events: inherit;}
 
-
-
 .mapWrap{position: relative;}
 .btnMyPosition{position: absolute;left: 10px;bottom: 30px;width: 42px;height: 42px;background: #FFFFFF;border: 1px solid #E0E0E0;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);border-radius: 5px;background-image: url(../images/icon_myLocation.svg);background-position: center;background-repeat: no-repeat;box-sizing: border-box;overflow: hidden;text-indent: -9999px;white-space: nowrap;z-index: 2;}
 .btnMyPosition:before{position: absolute;left: 10px;bottom: 30px;width: 42px;height: 42px;background: #FFFFFF;border: 1px solid #E0E0E0;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);border-radius: 5px;background-image: url(../images/icon_myLocation.svg);background-position: center;background-repeat: no-repeat;box-sizing: border-box;overflow: hidden;text-indent: -9999px;white-space: nowrap;z-index: 2;}
 .myPosition{position: relative;}
 .myPosition:before{content: "";position: absolute;width: 10px;height: 10px;background-color: #fff;border-radius: 50%;bottom: 6px;left: 50%;margin-left: -5px;-webkit-animation: myPositionOn 2s infinite;-moz-animation: myPositionOn 2s infinite;-ms-animation: myPositionOn 2s infinite;-o-animation: myPositionOn 2s infinite;animation: myPositionOn 2.2s infinite;}
 .myPosition img{max-width: inherit;}
-.shopSlideWrap{padding: 25px 16px 40px;background-size: cover;background-position: center;background-repeat: no-repeat;box-sizing: border-box;}
-.shopSlideWrap.shop10oclock{background-image: url(../images/bg_shop10oclock.jpg);}
-.shopName{font-size: 28px;color: #FFFFFF;font-weight: 700;line-height: 32px;text-align: center;letter-spacing: -0.6px;}
-.shopAddress{font-size: 15px;color: #FFFFFF;font-weight: 400;line-height: 18px;text-align: center;letter-spacing: -0.6px;opacity: 0.9;}
-.shopName + .shopAddress:before{content: "";display: block;width: 10px;height: 1px;margin: 7px auto 11px;background-color: #fff;}
-.shopSlide{margin-bottom: 0 !important;margin-top: 24px;}
-.shopSlide .shopItem{}
-.shopSlide .shopItem img{margin: 0 auto;border-radius: 10px;overflow: hidden;}
-.shopSlide .slick-dots{position: inherit;bottom: inherit;line-height: 0;margin-top: 15px;}
-.shopSlide .slick-dots li{width: 5px;height: 5px;margin: 0;vertical-align: middle;}
-.shopSlide .slick-dots li + li{margin-left: 5px;}
-.shopSlide .slick-dots li button{width: 100%;height: 100%;padding: 0;background-color: rgba(255, 255, 255, 0.3);border-radius: 5px}
-.shopSlide .slick-dots li button:before{display: none;}
-.shopSlide .slick-dots li.slick-active{width: 15px;}
-.shopSlide .slick-dots li.slick-active button{background-color: rgba(255, 255, 255, 0.85);}
-.shopInfo{position: relative;display: flex;align-items: flex-start;justify-content: space-between;padding: 20px 0;margin-top: 15px;border-top: 1px solid rgba(255, 255, 255, 0.3);border-bottom: 1px solid rgba(255, 255, 255, 0.3);box-sizing: border-box;}
-.shopInfo:before{content: "";position: absolute;top: 20px;left: 33.3%;display: block;width: 1px;height:  calc(100% - 40px);background-color: rgba(255, 255, 255, 0.3);border-radius: 30px;}
-.shopInfo:after{content: "";position: absolute;top: 20px;left: 66.6%;display: block;width: 1px;height:  calc(100% - 40px);background-color: rgba(255, 255, 255, 0.3);border-radius: 30px;}
-.shopInfo li{flex: 1;display: flex;justify-content: center;flex-direction: column;flex-wrap: wrap;margin: 9px 0;text-align: center;}
-.shopInfo li strong{margin-top: 9px;font-size: 15px;color: #fff;font-weight: 700;line-height: 26px;letter-spacing: -0.6px;}
-.shopInfo li p{margin-top: 4px;font-size: 13px;color: #fff;font-weight: 400;line-height: 20px;letter-spacing: -0.6px;word-break: keep-all;}
+.storeSlideWrap{padding: 25px 16px 40px;background-size: cover;background-position: center;background-repeat: no-repeat;box-sizing: border-box;}
+.storeSlideWrap.store10oclock{background-image: url(../images/bg_store10oclock.jpg);}
+.storeName{font-size: 28px;color: #FFFFFF;font-weight: 700;line-height: 32px;text-align: center;letter-spacing: -0.6px;}
+.storeAddress{font-size: 15px;color: #FFFFFF;font-weight: 400;line-height: 18px;text-align: center;letter-spacing: -0.6px;opacity: 0.9;}
+.storeName + .storeAddress:before{content: "";display: block;width: 10px;height: 1px;margin: 7px auto 11px;background-color: #fff;}
+.storeSlide{margin-bottom: 0 !important;margin-top: 24px;}
+.storeSlide .storeItem{}
+.storeSlide .storeItem img{margin: 0 auto;border-radius: 10px;overflow: hidden;}
+.storeSlide .slick-dots{position: inherit;bottom: inherit;line-height: 0;margin-top: 15px;}
+.storeSlide .slick-dots li{width: 5px;height: 5px;margin: 0;vertical-align: middle;}
+.storeSlide .slick-dots li + li{margin-left: 5px;}
+.storeSlide .slick-dots li button{width: 100%;height: 100%;padding: 0;background-color: rgba(255, 255, 255, 0.3);border-radius: 5px}
+.storeSlide .slick-dots li button:before{display: none;}
+.storeSlide .slick-dots li.slick-active{width: 15px;}
+.storeSlide .slick-dots li.slick-active button{background-color: rgba(255, 255, 255, 0.85);}
+.storeInfo{position: relative;display: flex;align-items: flex-start;justify-content: space-between;padding: 20px 0;margin-top: 15px;border-top: 1px solid rgba(255, 255, 255, 0.3);border-bottom: 1px solid rgba(255, 255, 255, 0.3);box-sizing: border-box;}
+.storeInfo:before{content: "";position: absolute;top: 20px;left: 33.3%;display: block;width: 1px;height:  calc(100% - 40px);background-color: rgba(255, 255, 255, 0.3);border-radius: 30px;}
+.storeInfo:after{content: "";position: absolute;top: 20px;left: 66.6%;display: block;width: 1px;height:  calc(100% - 40px);background-color: rgba(255, 255, 255, 0.3);border-radius: 30px;}
+.storeInfo li{flex: 1;display: flex;justify-content: center;flex-direction: column;flex-wrap: wrap;margin: 9px 0;text-align: center;}
+.storeInfo li strong{margin-top: 9px;font-size: 15px;color: #fff;font-weight: 700;line-height: 26px;letter-spacing: -0.6px;}
+.storeInfo li p{margin-top: 4px;font-size: 13px;color: #fff;font-weight: 400;line-height: 20px;letter-spacing: -0.6px;word-break: keep-all;}
 .scrollDown{position: relative;margin-top: 30px;text-align: center;-webkit-animation: scrollDown 2.2s infinite;-moz-animation: scrollDown 2.2s infinite;-ms-animation: scrollDown 2.2s infinite;-o-animation: scrollDown 2.2s infinite;animation: scrollDown 2.2s infinite;}
 .scrollDown p {margin-bottom: 6px;font-size: 13px;color: #fff;font-weight: 700;line-height: 26px;letter-spacing: -0.8px;-webkit-transition: all 0.4s cubic-bezier(0.445, 0.05, 0.55, 0.95);transition: all 0.4s cubic-bezier(0.445, 0.05, 0.55, 0.95);-webkit-transition-delay: .4s;transition-delay: .4s;}
 .scrollDown i {position: relative;display: inline-block;width: 18px;height: 27px;border: 1px solid #fff;border-radius: 15px;box-sizing: border-box;}
 .scrollDown i:after {content: "";position: absolute;top: 5px;left: 50%;transform: translateX(-50%);width: 1px;height: 6px;border-radius: 2px;background: #fff;-webkit-animation: scrollDownIcon 2s infinite;-moz-animation: scrollDownIcon 2s infinite;-ms-animation: scrollDownIcon 2s infinite;-o-animation: scrollDownIcon 2s infinite;animation: scrollDownIcon 2s infinite;}
-.shopDetails{background: #F9F9F9;}
+.storeDetails{background: #F9F9F9;}
 .detailsType01{text-align: left;}
 .detailsType01 img{display: block;margin: 0 auto;}
 .detailsType01 .detailsTitle{padding: 30px 16px 0;font-size: 22px;color: #000000;font-weight: 700;line-height: 26px;letter-spacing: -0.7px;word-break: keep-all;}
@@ -105,10 +103,10 @@ footer{background: #2E2E2E;padding: 16px 16px 9px;box-sizing: border-box;}
 
 
 
-.shopPin {position: relative;bottom: 65px;border-radius: 10px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);}
-.shopPin:after {content:"";position: absolute;left: 50%;bottom: -12px;width: 23px;height: 12px;margin-left: -12px;background: url(../images/icon_pinAfter.png)}
-.shopPin a{display: block;overflow: hidden;background: #FF0097 url(../images/icon_arrow_white.svg) no-repeat right 15px center;border-radius: 10px;text-align: center;}
-.shopPin .name{display: block;margin-right: 38px;padding: 11px 15px;background: #fff;font-size: 13px;color: #333;line-height: 16px;font-weight: 700;letter-spacing: -0.6px;}
+.storePin {position: relative;bottom: 65px;border-radius: 10px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);}
+.storePin:after {content:"";position: absolute;left: 50%;bottom: -12px;width: 23px;height: 12px;margin-left: -12px;background: url(../images/icon_pinAfter.png)}
+.storePin a{display: block;overflow: hidden;background: #FF0097 url(../images/icon_arrow_white.svg) no-repeat right 15px center;border-radius: 10px;text-align: center;}
+.storePin .name{display: block;margin-right: 38px;padding: 11px 15px;background: #fff;font-size: 13px;color: #333;line-height: 16px;font-weight: 700;letter-spacing: -0.6px;}
 
 
 @media screen and (max-width: 820px){
