--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -69,7 +69,7 @@ textarea::-webkit-input-placeholder, textarea::-moz-placeholder, textarea:-ms-in
 .wbreak {word-break: break-all;}
 
 /* strong color */
-.strong_txt1{color: #F5A419 !important;}
+.strong_txt1{color: #FF0097 !important;}
 .strong_txt2{color: #F97B0A !important;}
 .basic_txt1 {color: #fff !important;}/* withe */
 .basic_txt2 {color: #000 !important;}/* black */
