--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ header{position: relative;z-index: 99;-webkit-transition: all 0.5s ease;transiti
 .headerWrap .logo{float: left;margin: 23px 0 27px 16px;}
 .headerWrap .logo img.off{display: block;}
 .headerWrap .logo img.on{display: none;}
-.headerWrap #btnGnbOpen{float: right;position: relative;display: block;width: 42px;height: 42px;margin: 14px 16px 14px 0;background-image: url(../images/icon_gnb_open.png);background-position: center;background-repeat: no-repeat;overflow: hidden;text-indent: -9999px;white-space: nowrap;}
+.headerWrap #btnGnbOpen{float: right;position: relative;display: block;width: 42px;height: 42px;margin: 14px 16px 14px 0;background-image: url(../images/icon_gnb_open.svg);background-position: center;background-repeat: no-repeat;overflow: hidden;text-indent: -9999px;white-space: nowrap;}
 .progress{position: absolute;bottom: -3px;left:0;width: 100%;height: 3px;overflow: hidden;background-color: white;}
 .progress .bar{float: left;width: 0%;max-width: 100%;height: 100%;background-color:#FF0097;z-index: 99;-webkit-transition: width .4s ease;-o-transition: width .4s ease;transition: width .4s ease;}
 #gnb {position: fixed;top: 0;left: calc(50vw + 0px);right: 0;bottom: 0;max-width: 390px;height: 100%;background-color: rgba(0, 0, 0, 0.7);-webkit-overflow-scrolling: touch;z-index: 9999;opacity: 0;visibility: hidden;overflow-y: auto;-webkit-transition: all 0.5s ease;transition: all 0.5s ease;-webkit-transition-property: opacity, visibility;transition-property: opacity, visibility;-webkit-transition-delay: 100ms;transition-delay: 100ms;}
@@ -26,7 +26,7 @@ header{position: relative;z-index: 99;-webkit-transition: all 0.5s ease;transiti
 .gnbTop .snsGroup a{display: block;width: 36px;height: 36px;background-repeat: no-repeat;overflow: hidden;text-indent: -9999px;white-space: nowrap;}
 .gnbTop .snsGroup .facebook{background-image: url(../images/icon_facebook.svg);}
 .gnbTop .snsGroup .instagram{background-image: url(../images/icon_instagram.svg);}
-#btnGnbClose {position: absolute;top: 14px;left: -56px;width: 42px;height: 42px;overflow: hidden;text-indent: -9999px;white-space: nowrap;background-image: url(../images/icon_gnb_close.png);background-position: center;background-repeat: no-repeat;}
+#btnGnbClose {position: absolute;top: 14px;left: -56px;width: 42px;height: 42px;overflow: hidden;text-indent: -9999px;white-space: nowrap;background-image: url(../images/icon_gnb_close.svg);background-position: center;background-repeat: no-repeat;}
 #gnb.active {opacity: 1;visibility: visible;-webkit-transition-delay: 0s;transition-delay: 0s;}
 #gnb.active .gnbInner{transform: translateX(0);-webkit-transform: translateX(0);transition-duration: 0.5s;-webkit-transition-duration: 0.5s;}
 header.fixed{position: fixed;top: 0;width: 100%;max-width: 390px;background: rgba(255, 0, 151, 0.6);backdrop-filter: blur(2px);}
