--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -9,7 +9,7 @@ header{position: relative;z-index: 99;-webkit-transition: all 0.3s ease;transiti
 .headerWrap .logo img.on{display: none;}
 .headerWrap #btnGnbOpen{float: right;position: relative;display: block;width: 42px;height: 42px;margin: 14px 16px 14px 0;background-image: url(../images/icon_gnb_open.svg);background-position: center;background-repeat: no-repeat;overflow: hidden;text-indent: -9999px;white-space: nowrap;}
 .progress{position: absolute;bottom: -3px;left:0;width: 100%;height: 3px;overflow: hidden;background-color: white;}
-.progress .bar{float: left;width: 0%;max-width: 100%;height: 100%;background-color:#FF0097;z-index: 99;-webkit-transition: width .4s ease;-o-transition: width .4s ease;transition: width .4s ease;}
+.progress .bar{float: left;width: 0%;max-width: 100%;height: 100%;background-color:#FF0097;z-index: 99;-webkit-transition: width .4s ease;-o-transition: width .4s ease;transition: width .4s ease;-webkit-backface-visibility: hidden;}
 #gnb {position: fixed;top: 0;left: calc(50vw + 0px);right: 0;bottom: 0;max-width: 390px;height: 100%;background-color: rgba(0, 0, 0, 0.7);-webkit-overflow-scrolling: touch;z-index: 9999;opacity: 0;visibility: hidden;overflow-y: auto;-webkit-transition: all 0.5s ease;transition: all 0.5s ease;-webkit-transition-property: opacity, visibility;transition-property: opacity, visibility;-webkit-transition-delay: 100ms;transition-delay: 100ms;}
 #gnb .gnbInner{position: fixed;top: 0;right: 0;left: calc(50vw + 70px);bottom: 0;width: 100%;max-width: 320px;background: #fff;box-sizing: border-box;z-index: 999;transform: translateX(0);-webkit-transform: translateX(0);transition-duration: 0.5s;-webkit-transition-duration: 0.5s;-webkit-overflow-scrolling: touch;opacity: 1;}
 #gnb .gnbInner > ul{padding: 7px 20px;}
