--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,9 @@
 .mapWrap{position: relative;}
 .btnMyPosition{position: absolute;left: 10px;bottom: 30px;width: 42px;height: 42px;background: #fff;border: 1px solid #E0E0E0;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);border-radius: 5px;background-image: url(../images/icon_myLocation.svg);background-position: center;background-repeat: no-repeat;box-sizing: border-box;overflow: hidden;text-indent: -9999px;white-space: nowrap;z-index: 2;}
 .btnMyPosition:before{position: absolute;left: 10px;bottom: 30px;width: 42px;height: 42px;background: #fff;border: 1px solid #E0E0E0;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);border-radius: 5px;background-image: url(../images/icon_myLocation.svg);background-position: center;background-repeat: no-repeat;box-sizing: border-box;overflow: hidden;text-indent: -9999px;white-space: nowrap;z-index: 2;}
-.myPosition{position: relative;}
-.myPosition:before{content: "";position: absolute;width: 10px;height: 10px;background-color: #fff;border-radius: 50%;bottom: 6px;left: 50%;margin-left: -5px;-webkit-animation: myPositionOn 2s infinite;-moz-animation: myPositionOn 2s infinite;-ms-animation: myPositionOn 2s infinite;-o-animation: myPositionOn 2s infinite;animation: myPositionOn 2.2s infinite;}
-.myPosition img{max-width: inherit;}
+.myPosition{position: relative;width: 16px;height: 16px;}
+.myPosition:before{content: "";position: absolute;top: 50%;left: 50%;width: 16px;height: 16px;margin-left: -8px;margin-top: -8px;background-color: #fff;border-radius: 50%;-webkit-animation: myPositionOn 2s infinite;-moz-animation: myPositionOn 2s infinite;-ms-animation: myPositionOn 2s infinite;-o-animation: myPositionOn 2s infinite;animation: myPositionOn 2.2s infinite;}
+.myPosition img{max-width: inherit;vertical-align: 0;}
 .storePin {position: relative;bottom: 65px;border-radius: 10px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);}
 .storePin:after {content:"";position: absolute;left: 50%;bottom: -12px;width: 23px;height: 12px;margin-left: -12px;background: url(../images/icon_pinAfter.png)}
 .storePin a{display: block;overflow: hidden;background: #FF0097 url(../images/icon_arrow_white.svg) no-repeat right 15px center;border-radius: 10px;text-align: center;}
