--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 .mapTopFix + div{position: relative;margin-top: 290px;z-index: 1;}
 .btnMyPosition{position: absolute;left: 10px;bottom: 30px;width: 44px;height: 44px;background: #fff;border: 1px solid #E0E0E0;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);border-radius: 5px;background-image: url(../images/icon_myLocation.svg);background-position: center;background-repeat: no-repeat;box-sizing: border-box;overflow: hidden;text-indent: -9999px;white-space: nowrap;z-index: 2;}
 .zoomControl{position: absolute;bottom: 30px;right: 10px;width: 44px;z-index: 1;} 
-.zoomControl button{width: 44px;height: 44px;background: #fff;border: 1px solid #E0E0E0;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);border-radius: 5px;cursor: pointer;}
+.zoomControl button{display: flex;justify-content: center;align-items: center;width: 44px;height: 44px;background: #fff;border: 1px solid #E0E0E0;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);border-radius: 5px;box-sizing: border-box;cursor: pointer;}
 .zoomControl button + button{margin-top: 5px;}
 .myPosition{position: relative;width: 16px;height: 16px;}
 .myPosition:before{content: "";position: absolute;top: 50%;left: 50%;width: 16px;height: 16px;margin-left: -8px;margin-top: -8px;background-color: #fff;border-radius: 50%;-webkit-animation: myPositionOn 2s infinite;-moz-animation: myPositionOn 2s infinite;-ms-animation: myPositionOn 2s infinite;-o-animation: myPositionOn 2s infinite;animation: myPositionOn 2.2s infinite;}
