--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -48,7 +48,7 @@ footer{background: #2E2E2E;padding: 16px 16px 9px;box-sizing: border-box;}
 .footerInfo li span:before{content: "";display: inline-block;width: 1px;height: 9px;margin: 0 8px; background-color: #fff;vertical-align: middle;}
 .copyright{margin-top: 10px;font-size: 12px;color: #B4B4B4;font-weight: 400;line-height: 24px;letter-spacing: -0.6px;}
 .copyright span{color: #FF0097;}
-#btnTop{opacity: 0;transform: translate(0, 30px);position: fixed;bottom: 30px;left: calc(50vw + 310px);width: 50px;height: 50px;background-color: rgba(255, 0, 151, 0.7);backdrop-filter: blur(2px);background-image: url(../images/icon_top.svg);background-position: center;background-repeat: no-repeat;border-radius: 50%;overflow: hidden;text-indent: -9999px;white-space: nowrap;transition: 1s;-webkit-transition: 1s;pointer-events: none;}
+#btnTop{opacity: 0;transform: translate(0, 30px);position: fixed;bottom: 30px;left: calc(50vw + 310px);width: 50px;height: 50px;background-color: rgba(255, 0, 151, 0.7);backdrop-filter: blur(2px);background-image: url(../images/icon_top.svg);background-position: center;background-repeat: no-repeat;border-radius: 50%;overflow: hidden;text-indent: -9999px;white-space: nowrap;transition: 1s;-webkit-transition: 1s;pointer-events: none;z-index: 99;}
 #btnTop.show{opacity: 1;transform: translate(0, 0);pointer-events: inherit;}
 
 @media screen and (max-width: 820px){
