--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,7 @@
 @import url(store.css);
 
+/* map */
 .mapWrap{position: relative;}
-.mapTopFix{position: fixed;width: 100%;height: 100%;top: 0;bottom: 0;left: 0;right: 0;z-index: 0;}
-.mapTopFix .mapWrap{position: absolute;left: calc(50vw + 0px);top: 70px;width: 100%;max-width: 390px;height: 290px;}
-.mapTopFix + div{position: relative;margin-top: 290px;z-index: 1;}
 .btnMyPosition{position: absolute;left: 10px;bottom: 30px;width: 44px;height: 44px;background: #fff;border: 1px solid #E0E0E0;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);border-radius: 5px;background-image: url(../images/icon_myLocation.svg);background-position: center;background-repeat: no-repeat;box-sizing: border-box;overflow: hidden;text-indent: -9999px;white-space: nowrap;z-index: 2;}
 .zoomControl{position: absolute;bottom: 30px;right: 10px;width: 44px;z-index: 1;} 
 .zoomControl button{display: flex;justify-content: center;align-items: center;width: 44px;height: 44px;background: #fff;border: 1px solid #E0E0E0;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);border-radius: 5px;box-sizing: border-box;cursor: pointer;}
@@ -15,10 +13,24 @@
 .storePin:after{content:"";position: absolute;left: 50%;bottom: -12px;width: 23px;height: 12px;margin-left: -12px;background: url(../images/icon_pinAfter.png)}
 .storePin a{display: block;overflow: hidden;background: #FF0097 url(../images/icon_arrow_white.svg) no-repeat right 15px center;border-radius: 10px;text-align: center;}
 .storePin .name{display: block;margin-right: 38px;padding: 11px 15px;background: #fff;font-size: 13px;color: #333;line-height: 16px;font-weight: 700;letter-spacing: -0.6px;}
+.mapTopBack{position: fixed;width: 100%;height: 100%;top: 0;bottom: 0;left: 0;right: 0;z-index: 0;}
+.mapTopBack .mapWrap{position: absolute;left: calc(50vw + 0px);top: 70px;width: 100%;max-width: 390px;height: 290px;}
+.mapTopBack + .mapFront{position: relative;margin-top: 290px;z-index: 1;}
+
+.storeList{position: relative;padding: 40px 16px 20px;background: #fff;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);box-sizing: border-box;display: flex;flex-direction: row;flex-wrap: wrap;align-items: flex-start;justify-content: space-between;}
+.storeList:before{content: "";display: block;position: absolute;top: 15px;left: 50%; transform: translate(-50%, 0%);width: 100px;height: 5px;background: #E0E0E0;border-radius: 15px;}
+.storeList .storeItem{width: calc(50% - 5px);padding: 10px 12px 11px;margin-top: 10px;background: #fff;border: 1px solid #E1E1E1;box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.05);border-radius: 10px;box-sizing: border-box;text-align: center;}
+.storeList .storeItem:nth-child(2n+2){margin-left: 10px;}
+.storeList .storeItem:nth-child(-n+2){margin-top: 0;}
+.storeList .storeItem .storeThumb{position: relative;display: block;width: 100%;padding: 81.09% 0 0;}
+.storeList .storeItem .storeThumb img{position: absolute;top: 0;left: 0;width: 100%;height: 100%;object-fit: cover;border-radius: 10px;}
+.storeList .storeItem .storeName{margin-top: 18px;font-size: 16px;color: #000;font-weight: 700;line-height: 20px;letter-spacing: -0.7px;word-break: keep-all;}
+.storeList .storeItem .storeBenefit{font-size: 13px;color: #444;font-weight: 400;line-height: 20px;letter-spacing: -0.6px;word-break: keep-all;}
+.storeList .storeItem .btnStoreView{width: 100%;height: 40px;margin-top: 10px;background: #fff;border: 1px solid #FF0097;border-radius: 10px;box-sizing: border-box;font-size: 13px;color: #FF0097;font-weight: 700;line-height: 24px;letter-spacing: -0.6px;}
 
 
 @media screen and (max-width: 820px){
-    .mapTopFix .mapWrap{left: 0;max-width: 100%;}
+    .mapTopBack .mapWrap{left: 0;max-width: 100%;}
 }
 @media screen and (max-width: 375px){
 
